# inangoplug-mngm

./: README.md  configure.ac
config/: TR-181-InangoplugComponent.xml  inangoplug.cfg  inangoplug_defaults
scripts/: CcspInangoplugComponent.path  CcspInangoplugComponent.service  TR-181-InangoplugComponent.xml  check_inangoplug_enabled.path  check_inangoplug_enabled.service  check_ovs_infra_enabled.service  connect_inangoplug.path  connect_inangoplug.service  connect_inangoplug.sh  run_inangoplug.sh  run_inangoplug.sh.in  run_ovs_infra.sh
source/: Makefile.am
source/InangoplugComponent/: Makefile.am  cosa_apis_inangoplugcomponentplugin.c  cosa_apis_inangoplugcomponentplugin.h  inangoplug_log.c  inangoplug_log.h  plugin_main.c  ssp_action.c  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c
